Fixes for documentary