@@ -129,60 +129,19 @@ My favorite quote from [Poltergeist](https://www.imdb.com/title/tt0084516/?ref_=
 
 # So other languages are safe, right?
 
-Sadly, vulnerabilities in third party libraries are not an exclusive threat of Python. For example, the very useful Java logging library [log4J](https://blogs.apache.org/foundation/entry/apache-log4j-cves) made the rounds recently.
-
-To illustrate the problem, I will download a vulnerable version of the excellent reverse engineering tool [Ghidra](https://github.com/NationalSecurityAgency/ghidra) (10.0.4):
+Sadly, vulnerabilities in third party libraries are not an exclusive threat of Python. To illustrate the problem, I will download a vulnerable version of the well known Open Source applicaion server
 
 ```shell=
-[josevnz@dmaf5 ~]$ curl --output ~/Downloads/hidra_10.0.4_PUBLIC_20210928.zip --location --fail https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.4_build/ghidra_10.0.4_PUBLIC_20210928.zip
+[josevnz@dmaf5 EnableSysadmin]$ curl --location --fail --output ~/Downloads/XXXX-A.B.C-zzzz.zip https://XXX.ZZZZ.org/dist/XXX/server/A.B.C/XXXX-A.B.C-zzzz.zip
   % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                  Dload  Upload   Total   Spent    Left  Speed
-100   672  100   672    0     0   8727      0 --:--:-- --:--:-- --:--:--  8842
-100  359M  100  359M    0     0  11.0M      0  0:00:32  0:00:32 --:--:-- 11.1M
+100 88.8M  100 88.8M    0     0  5142k      0  0:00:17  0:00:17 --:--:-- 1194k
+
 cd ~/Downloads
-unzip hidra_10.0.4_PUBLIC_20210928.zip
+unzip XXXX-A.B.C-zzzz.zip
 ```
 
-We can then use a specific scanner for this threat, like [local-log4j-vuln-scanner](https://github.com/hillu/local-log4j-vuln-scanner) to check for this vulnerability:
-
-```shell
-[josevnz@dmaf5 Downloads]$ curl --fail --location --output ~/Downloads/local-log4j-vuln-scanner https://github.com/hillu/local-log4j-vuln-scanner/releases/download/v0.13/local-log4j-vuln-scanner
-  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
-                                 Dload  Upload   Total   Spent    Left  Speed
-100   663    0   663    0     0   4118      0 --:--:-- --:--:-- --:--:--  4143
-100 2578k  100 2578k    0     0  4730k      0 --:--:-- --:--:-- --:--:-- 4730k
-[josevnz@dmaf5 Downloads]$ chmod u+x ~/Downloads/local-log4j-vuln-scanner
-
-[josevnz@dmaf5 Downloads]$ ~/Downloads/local-log4j-vuln-scanner --quiet ~/Downloads/ghidra_10.0.4_PUBLIC/
-Checking for vulnerabilities: CVE-2019-17571, CVE-2021-44228, CVE-2021-45105
-indicator for vulnerable component found in /home/josevnz/Downloads/ghidra_10.0.4_PUBLIC/Ghidra/Framework/Generic/lib/log4j-core-2.12.1.jar (org/apache/logging/log4j/core/lookup/JndiLookup.class): JndiLookup.class 2.12.0-2.12.1 CVE-2021-44228, CVE-2021-45105
-indicator for vulnerable component found in /home/josevnz/Downloads/ghidra_10.0.4_PUBLIC/Ghidra/Framework/Generic/lib/log4j-core-2.12.1.jar (org/apache/logging/log4j/core/net/JndiManager.class): JndiManager.class log4j 2.12.0-2.12.1 CVE-2021-44228, CVE-2021-45105
-```
-
-In this case you can see the tool found the following vulnerabilities: *CVE-2021-44228, CVE-2021-45105*
-
-The latest version of Ghidra (Ghidra 10.1.1) fixed this issue, let's download and show that here:
-
-```shell
-[josevnz@dmaf5 Downloads]$ curl --location --fail --output ~/Downloads/ghidra_10.1.1_PUBLIC_20211221.zip https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.1.1_build/ghidra_10.1.1_PUBLIC_20211221.zip
-  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
-                                 Dload  Upload   Total   Spent    Left  Speed
-100   672  100   672    0     0   8615      0 --:--:-- --:--:-- --:--:--  8615
-100  332M  100  332M    0     0  10.6M      0  0:00:31  0:00:31 --:--:-- 10.8M
-
-[josevnz@dmaf5 Downloads]$ curl --location --fail --output ~/Downloads/ghidra_10.1.1_PUBLIC_20211221.zip https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.1.1_build/ghidra_10.1.1_PUBLIC_20211221.zip
-  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
-                                 Dload  Upload   Total   Spent    Left  Speed
-100   672  100   672    0     0   8615      0 --:--:-- --:--:-- --:--:--  8615
-100  332M  100  332M    0     0  10.6M      0  0:00:31  0:00:31 --:--:-- 10.8M
-
-[josevnz@dmaf5 Downloads]$ ~/Downloads/local-log4j-vuln-scanner --quiet ~/Downloads/ghidra_10.1.1_PUBLIC/
-Checking for vulnerabilities: CVE-2019-17571, CVE-2021-44228, CVE-2021-45105
-```
-
-Very good, this version is not vulnerable to a log4J exploit.
-
-But, there are any other vulnerabilities? OWASP wrote a really nice dependency analyzer you can [use](https://owasp.org/www-project-dependency-check/):
+OWASP wrote a really nice dependency analyzer you can [use](https://owasp.org/www-project-dependency-check/). 
 
 ```shell
 [josevnz@dmaf5 Downloads]$ curl --fail --output ~/Downloads/dependency-check-6.5.3-release.zip --location https://github.com/jeremylong/DependencyCheck/releases/download/v6.5.3/dependency-check-6.5.3-release.zip
@@ -192,14 +151,27 @@ But, there are any other vulnerabilities? OWASP wrote a really nice dependency a
 100 23.0M  100 23.0M    0     0  7653k      0  0:00:03  0:00:03 --:--:-- 8899k
 ```
 
-[Scanning](https://jeremylong.github.io/DependencyCheck/dependency-check-cli/index.html) the vulnerable Ghidra (10.0.4) one more time:
+Let's use it to scan vulnerabilities for this application:
 
 ```shell
-[josevnz@dmaf5 Downloads]$ ~/Downloads/dependency-check/bin/dependency-check.sh --prettyPrint --format HTML -scan /home/josevnz/Downloads/ghidra_10.0.4_PUBLIC/Ghidra/Framework/Generic/lib/
+[josevnz@dmaf5 Downloads]$ ~/Downloads/dependency-check/bin/dependency-check.sh --prettyPrint --format HTML -scan /home/josevnz/Downloads/XXXX-A.B.C-zzzz/lib/
 [INFO] Checking for updates
-[INFO] Skipping NVD check since last check was within 4 hours.
-[INFO] Skipping RetireJS update since last update was within 24 hours.
-[INFO] Check for updates complete (68 ms)
+[INFO] Download Started for NVD CVE - Modified
+[INFO] Download Complete for NVD CVE - Modified  (278 ms)
+[INFO] Processing Started for NVD CVE - Modified
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by com.fasterxml.jackson.module.afterburner.util.MyClassLoader (file:/home/josevnz/Downloads/dependency-check/lib/jackson-module-afterburner-2.13.1.jar) to method java.lang.ClassLoader.findLoadedClass(java.lang.String)
+WARNING: Please consider reporting this to the maintainers of com.fasterxml.jackson.module.afterburner.util.MyClassLoader
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+[INFO] Processing Complete for NVD CVE - Modified  (5150 ms)
+[INFO] Begin database maintenance
+[INFO] Updated the CPE ecosystem on 116793 NVD records
+[INFO] Cleaned up 2 orphaned NVD records
+[INFO] End database maintenance (24739 ms)
+[INFO] Begin database defrag
+[INFO] End database defrag (4660 ms)
+[INFO] Check for updates complete (39967 ms)
 [INFO] 
 
 Dependency-Check is an open source tool performing a best effort analysis of 3rd party dependencies; false positives and false negatives may exist in the analysis performed by the tool. Use of the tool and the reporting provided constitutes acceptance for use in an AS IS condition, and there are NO warranties, implied or otherwise, with regard to the analysis or its use. Any use of the tool and the reporting provided is at the user’s risk. In no event shall the copyright holder or OWASP be held liable for any damages whatsoever arising out of or in connection with the use of this tool, the analysis performed, or the resulting report.
@@ -212,27 +184,32 @@ Dependency-Check is an open source tool performing a best effort analysis of 3rd
 
 
 [INFO] Analysis Started
-[INFO] Finished Archive Analyzer (0 seconds)
+[INFO] Finished Archive Analyzer (1 seconds)
 [INFO] Finished File Name Analyzer (0 seconds)
-[INFO] Finished Jar Analyzer (0 seconds)
-[INFO] Finished Central Analyzer (0 seconds)
+[INFO] Finished Jar Analyzer (1 seconds)
+[INFO] Finished Central Analyzer (9 seconds)
+[ERROR] ----------------------------------------------------
+[ERROR] .NET Assembly Analyzer could not be initialized and at least one 'exe' or 'dll' was scanned. The 'dotnet' executable could not be found on the path; either disable the Assembly Analyzer or add the path to dotnet core in the configuration.
+[ERROR] ----------------------------------------------------
 [INFO] Finished Dependency Merging Analyzer (0 seconds)
 [INFO] Finished Version Filter Analyzer (0 seconds)
 [INFO] Finished Hint Analyzer (0 seconds)
-[INFO] Created CPE Index (1 seconds)
-[INFO] Finished CPE Analyzer (2 seconds)
+[INFO] Created CPE Index (2 seconds)
+[INFO] Finished CPE Analyzer (6 seconds)
 [INFO] Finished False Positive Analyzer (0 seconds)
 [INFO] Finished NVD CVE Analyzer (0 seconds)
-[INFO] Finished Sonatype OSS Index Analyzer (0 seconds)
+[INFO] Finished Sonatype OSS Index Analyzer (3 seconds)
 [INFO] Finished Vulnerability Suppression Analyzer (0 seconds)
 [INFO] Finished Dependency Bundling Analyzer (0 seconds)
-[INFO] Analysis Complete (3 seconds)
+[INFO] Analysis Complete (23 seconds)
 [INFO] Writing report to: /home/josevnz/Downloads/./dependency-check-report.html
 ```
 
-The report could generate false dependencies, and there is a [way to minimize them](https://jeremylong.github.io/DependencyCheck/general/suppression.html). But the value of this tool is great, as it can be added to your continuous integration pipelines:
+![Scan results for XXXX](https://github.com/josevnz/EnableSysadminRssReader/raw/main/owasp_scan.png)
 
-![Scan results for Ghidra](https://github.com/josevnz/EnableSysadminRssReader/raw/main/ghidra_owasp_scan.png)
+The report shows than it has lots of issues (the Open Source vendor fixed all of them on the next release). But I think you will appreciate now why it is important to keep tabs on your software and their dependencies!
+
+Not everything is perfect, and the tool [could generate false positives](https://jeremylong.github.io/DependencyCheck/general/suppression.html);  even with that the value of this tool is great, as it can be added to your continuous integration pipelines.
 
 # What did we learn?
 
